<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootLayout"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <TextView
            android:text="@string/form_title"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/form_subTitle"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/form_titleForm"
            android:textSize="16sp"
            android:layout_margin="20dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/form_hintName"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_account_circle_black_24dp">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="text"
                android:id="@+id/txt_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/form_hintEmail"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_email_black_24dp">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textEmailAddress"
                android:id="@+id/txt_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/form_hintCUI"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="number"
                android:id="@+id/txt_user_CUI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/form_hintPhone"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_call_black_24dp">
            <com.google.android.material.textfield.TextInputEditText
                android:inputType="phone"
                android:id="@+id/txt_user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/txt_rider_app"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/form_author"
        android:textSize="12sp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_above="@+id/txt_rider_app"
        android:layout_margin="16dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:background="@color/colorPrimary"
            android:id="@+id/btnRegister"
            android:textColor="@android:color/white"
            android:text="@string/form_textButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
        </Button>
    </LinearLayout>

</RelativeLayout>